tests/invalid/macro_cycle.c
#define A B
#define B A
A
int main() { return A; }
